# polyqueue

./: .dockerignore  Dockerfile  LICENSE  README.md  pyproject.toml
docs/cloud-testing/: README.md  test-on-aws.md  test-on-azure.md
src/polyqueue/: __init__.py  _version.py  cli.py  config.py  enqueue_options.py  job_api.py  metrics.py  results.py  schema.py  stats.py  tables.py
src/polyqueue/jobs/: context.py  dispatcher.py
src/polyqueue/queue/: azure_service_bus_queue.py  db.py  factory.py  inprocess_queue.py  interface.py  pgmq_queue.py  redis_queue.py  sqs_queue.py
src/polyqueue/utils/: payload.py  result.py
src/polyqueue/worker/: __main__.py  identity.py  main.py  registry.py
tests/: azuresb_config.json  conftest.py  docker-compose.yml  test_azure_sb_queue.py  test_db_result.py  test_db_worker.py  test_dispatcher.py  test_job_api.py  test_metrics.py  test_payload.py  test_pgmq_queue.py  test_redis_queue.py  test_registry.py  test_result_storage.py  test_result_storage_pgmq.py  test_results.py  test_sqs_queue.py  test_stats.py  test_typed_enqueue_integration.py  test_utils_result.py  test_worker_identity.py
tools/demo/: README.md  enqueue.py  enqueue_multiworker.py  handlers.py  job_defs.py  worker.py
ts/tools/dashboard/: .env.example  README.md  index.html  package.json  vite.config.ts
ts/tools/dashboard/src/server/: config.ts  db.ts  index.ts  schema.ts
ts/tools/dashboard/src/server/queries/: jobAttempts.ts  jobDetail.ts  jobs.ts  snapshot.ts  workers.ts
ts/tools/dashboard/src/server/routes/: admin.ts  config.ts  jobDetail.ts  jobs.ts  snapshot.ts  workers.ts
ts/tools/dashboard/src/shared/: types.ts
ts/tools/dashboard/src/ui/: App.tsx  api.ts  index.css  main.tsx
ts/tools/dashboard/src/ui/components/: JobDetailPanel.tsx  JobsTable.tsx  RefreshControl.tsx  SnapshotCards.tsx  StatusBadge.tsx  (+1 more)
(+1 files in other folders)
